syntax = "proto3";

option go_package = "learn_grpc/pb";
package pb;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayHi(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}